--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Service Award       </p>
                                         </p>
                                         <p>
                                             Assisted in planning school events, supported council initiatives, and collaborated with peers to represent student interests and enhance the school community.
-                                                <li>Volunteerd for various events
+                                                <li>Volunteered for various events
                                                 <li>Helped with planning of events
                                                 <li>Actively participated in meetings
                     
